--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 {
                   "content": "Integración",
                   "children": [
-                    { "content": "Subdirector de Centro (presidente)", "children": [] },
+                    { "content": "Subdirector de Centro (o su representante)", "children": [] },
                     { "content": "Coordinador Académico", "children": [] },
                     { "content": "Instructor de planta", "children": [] },
                     { "content": "Representante de aprendices (con voz,<br>sin voto)", "children": [] }
